<resources>
    <string name="app_name" translatable="false">SporzDroid</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_tab_game">Games</string>
    <string name="title_tab_person">Persons</string>
    <string name="button_add_game">Create a game</string>
    <string name="button_add_person">Add a person</string>
    <string name="title_activity_person">Person</string>
    <string name="hint_person_name">Name</string>
    <string name="button_remove_person">Remove the person</string>
    <string name="button_save_person">Save the person</string>
    <string name="title_activity_game">Game</string>

    <string name="title_tab_game_state">Game state</string>
    <string name="title_tab_participation">Participation</string>
    <string name="dialog_delete_person">Remove this person?</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_next_phase">Next phase</string>
    <string name="action_previous_phase">Previous phase</string>
    <string name="state_game_finished">Game finished</string>
    <string name="state_game_in_progress">Game in progress</string>
    <string name="label_phase">Current phase</string>
    <string name="label_mutant_number">Number of mutants</string>
    <string name="label_player_number">Number of players</string>
    <string name="label_medic_number">Number of medics</string>
    <string name="button_add_participation">Add a player</string>
    <string name="title_activity_select_person">Select players</string>
</resources>
